# currymon

./: .gitignore  README.md  currymon.cabal  stack.yaml
app/: Main.hs
src/: Currymon.hs
